@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ themeUrl }}">
     <script nonce="{{ nonce }}">
       const TITLE_CONFIG = '{{ titleConfig }}';
+      const FOOTER_CONFIG = '{{ footerConfig }}';
       const DEMO_MODE = {{ demoMode }};
       const VERSION = '{{ version }}';
       const PATH = '{{ path }}';
